# windows-sdk-scanner

./: Cargo.toml  Readme.md
.github/workflows/: rust.yml
examples/: parse-latest-xaudio2.rs
src/: _lib.rs  errors.rs  location.rs  sdk.rs  src_reader.rs  validation.rs  vec_map_.rs  version.rs  ztest.rs
src/cpp/: constant.rs  enum_.rs  field.rs  flag.rs  function.rs  ident.rs  interface.rs  issue.rs  macro_.rs  method.rs  namespace.rs  struct_.rs  type_.rs  union_.rs
src/ext/: char_ext.rs  str_ext.rs
src/types/: _builder.rs  _root.rs
