# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                    = "maulingmonkey-windows-sdk-scanner"
version                 = "0.0.0-git"
edition                 = "2021"
license                 = "Apache-2.0 OR MIT"
readme                  = "Readme.md"

[lib]
path                    = "src/_lib.rs"

[dependencies]
abibool                 = "0.5"
abistr                  = "0.1"
clang.version           = "1.0.3"
clang.features          = ["clang_10_0", "runtime"]
lazy_static             = "1"
mmrbi                   = "0.0.17"
